BUGFIX CMS Breadcrumbs and tabs as inline blocks which can span multiple lines, rather than being cropped off (fixes #6882)

--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -87,17 +87,19 @@ body.cms {
 }
 
 .cms-content-header {
-	padding: ($grid-y - 8) 0 $grid-y $grid-x;	
-	height: $grid-y * 4;
+	padding-left: $grid-x * 2;
 	z-index: 60;
-	overflow:hidden;
-	@include box-shadow($color-shadow-light 0 0 ($grid-x / 2) inset);
+	@include box-shadow($color-shadow-dark 0 0 ($grid-x / 2) inset);
 	background: {
 		image:url(../images/textures/cms_content_header.png);
 		repeat:repeat;
-		position: 0 1px;
 	}
-	
+
+	.cms-content-header-info *,
+	.cms-content-header-tabs * {
+		@include inline-block;
+	}
+
 	a {
 		color: $color-text-blue-link;
 	}
@@ -109,60 +111,31 @@ body.cms {
 	}
 
 	h2 {
-		padding: $grid-y - 2 $grid-x 0 $grid-x;
 		font-size: $font-base-size + 2;
-		line-height: $grid-x * 3;
 		font-weight: bold;
-		/* text-shadow: darken($color-widget-bg, 15%) 1px 1px 0; */  // Gives wrong effect
 		margin: 0;
-		display:table-cell;
-		vertical-align:top;
-		width:60%;
-
-		.section-icon {
-			display: inline-block;
-			vertical-align: middle;
-		}
-
-		.breadcrumbs-wrapper {
-			display: inline-block;
-			vertical-align: middle;
-			.crumb {
-				display: inline;
-				line-height:26px;
-				padding:0 5px;
-			}
-			.crumb:first-child {
-				padding-left:0px;
-			}
-			.crumb:last-child {
-				padding-right:0px;
-			}
-		}
 	}
 
-	& > div {
-		display:table;
-		width: 100%;
-		.cms_backlink {
-			display:table-cell;
-			vertical-align:middle;
-			width:auto;
-		}
+	.cms-content-header-info {
+		float:left;
+		// TODO 2px less than tabs to ensure tabs bottom align correctly, shouldn't be necessary
+		line-height: 38px; 
 	}
 	
 	.cms-content-header-tabs {
-		display:table-cell;
-		white-space:nowrap;
-		width:40%;
+		float: right;
+		padding-right: $grid-x*3;
+		line-height: 40px;
+
 		.ui-tabs-nav {
-			float:right;
-			/* margin-right:$grid-x*4; */ // Removed to make tabs align far right
 			li {
 				a {
+					@include inline-block;
+					float: none;
+					line-height: 40px;
 					font-weight: bold;
-					line-height: $grid-y * 2;
-					padding: $grid-y*1.5 $grid-x*2.5 $grid-y*1.5;
+					margin: 0;
+					padding: 0 $grid-x*2;
 				}
 			}
 			
@@ -190,6 +163,14 @@ body.cms {
 			.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
 				border-radius:0;
 			}
+		}
+	}
+
+	// Reset to default styles
+	.ss-ui-button {
+		line-height: $grid-x*3;
+		.ui-button-text {
+			line-height: 1.4;
 		}
 	}
 }
@@ -1069,8 +1050,6 @@ form.member-profile-form {
 
 .cms {
 	.cms-content {
-		/* border-right: 1px solid $color-light-separator; */ // This holds the cms away from the right side by 1px so removed
-		
 		@include box-shadow(3px 0 4px rgba(0,0,0,0.15));
 		@include border-radius(0);
 	}
